# raycaster

./: CMakeLists.txt
include/: config.h  macros.h  vec2.h  vec2i.h
src/: main.c  vec2.c  vec2i.c
